--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@ L’obiettivo dichiarato della società è quello di stabilizzarsi in Serie A e 
 <p><font size="5">
 Il Brescia Calcio guarda al futuro con ambizione. Il sogno è quello di tornare stabilmente in Serie A, migliorare le infrastrutture, continuare a crescere con i giovani e rafforzare il legame con i tifosi. La passione, la storia e l’orgoglio della città restano le fondamenta su cui costruire il futuro.
 </font></p>
+<script type="text/javascript" src="https://counter.websiteout.com/js/36/0/0/0"></script>
 </body>
 </html>
